add more to css and index.html

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,25 +8,44 @@ Color Palette:
 --cardinal: hsla(351, 80%, 44%, 1);*/
 
 /*General Styles*/
-body {
-    background-color: hsla(221, 45%, 19%, 1);
-    color: hsla(65, 27%, 92%, 1);
-  }
+     body {
+        background-color: hsla(221, 45%, 19%, 1);
+        color: hsla(65, 27%, 92%, 1);
+    }
 
-  li {
-    font-size: 1.15rem;
-    font-family: Montserrat;
-  }
+    li {
+        font-size: 1.15rem;
+        font-family: Montserrat;
+        margin-left: 15px;
+    }
 
-  p {
-    font-size: 1.15rem;
-    font-family: Montserrat;
-    margin: 15px;
-  }
+    p {
+        font-size: 1.15rem;
+        font-family: Montserrat;
+        margin: 15px;
+    }
 
-  h1, h2, h3, h4, h5 {
-    font-family: Comfortaa, Helvetica, sans-serif;
-    background-color: hsla(202, 93%, 40%, 1);
-    padding: 5px;
-    text-align: center;
-  }
+    h1, h2, h3, h4, h5 {
+        font-family: Comfortaa, Helvetica, sans-serif;
+        background-color: hsla(202, 93%, 40%, 1);
+        padding: 5px;
+        text-align: center;
+    }
+
+    .code {
+        font-family: monospace;
+    }
+
+/*Style for Instructions*/
+    #instructions {
+        border: 2px solid hsla(65, 27%, 92%, 1);
+        max-width: 50%;
+        min-width: 150px;
+        float: left;
+    }
+
+    #warning {
+        font-weight: bold;
+        text-decoration: underline;
+        font-size: 1.2em;
+    }
