--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -13,7 +13,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 5px 0;
+	margin: 5px;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
